# duckdb-httpsql

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  Tests.yml
src/: CMakeLists.txt  httpsql_arrow_reader.cpp  httpsql_catalog.cpp  httpsql_extension.cpp  httpsql_http_client.cpp  httpsql_ipc_stream.cpp  httpsql_optimizer.cpp  httpsql_scanner.cpp  httpsql_schema_entry.cpp  httpsql_storage.cpp  httpsql_table_entry.cpp  httpsql_transaction.cpp  httpsql_transaction_manager.cpp
src/include/: httpsql_arrow_reader.hpp  httpsql_catalog.hpp  httpsql_config.hpp  httpsql_extension.hpp  httpsql_http_client.hpp  httpsql_ipc_stream.hpp  httpsql_optimizer.hpp  httpsql_scanner.hpp  httpsql_schema_entry.hpp  httpsql_storage.hpp  httpsql_table_entry.hpp  httpsql_transaction.hpp  httpsql_transaction_manager.hpp
test/: run_tests.py  setup_test_data.sql
